--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
 fastapi==0.104.1
 uvicorn==0.23.2
 qdrant-client==1.16.1
-openai==1.54.0
+openai==1.40.0
+httpx==0.27.0
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 pydantic==2.5.2
